--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 :root {
   --accent-color: #2196f3;
   --text-color: #757575;
@@ -54,474 +53,239 @@ body {
 }
 
 .section {
-  padding: 94px 0;
+  padding: 60px 0;
+}
+
+@media screen and (min-width: 768px) {
+  .section {
+    padding: 94px 0;
+  }
 }
 
 .container {
-  width: 1200px;
   padding: 0 15px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
-.list-item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 .section-title {
-  text-align: center;
-  font-size: 36px;
+  font-weight: 700;
+  font-size: 28px;
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
   margin-bottom: 50px;
 }
 
-.flex-container {
+@media screen and (min-width: 1200px) {
+  .section-title {
+    font-size: 36px;
+  }
+}
+
+.page-header {
+  border-bottom: 1px solid #ececec;
+  position: relative;
+}
+
+.page-header__container {
+  padding: 16px;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.page-header {
-  border-bottom: 1px solid #ececec;
-}
-
-.page-header .link-icon {
-  fill: currentColor;
-  margin-right: 10px;
-}
-
-.page-header .list-item {
-  position: relative;
+.nav-list, .header-contact-list {
+  display: none;
 }
 
 .logo {
   font-family: 'Raleway';
-  font-weight: bold;
-  font-size: 26px;
-  line-height: 1.19;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
 }
 
 .header-logo {
   color: #000000;
-  margin-right: 93px;
 }
 
 .logo-accent {
   color: var(--accent-color);
 }
 
-.main-nav {
-  display: flex;
-  align-items: center;
-}
-
-.link-list {
-  display: flex;
-}
-
-.nav-link {
-  display: block;
-  padding: 35px 0;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: inherit;
-  transition: color var(--transition-duration) var(--transition-timing-function);
-}
-
-.nav-link:hover, .nav-link:focus {
-  color: var(--accent-color);
-}
-
-.link-list .list-item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.header-contact-link {
-  display: flex;
-  align-items: center;
-  padding: 35px 0;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--text-color);
-  transition: color var(--transition-duration) var(--transition-timing-function);
-}
-
-.header-contact-link:hover, .header-contact-link:focus {
-  color: var(--accent-color);
-}
-
-.current {
-  color: var(--accent-color);
-}
-
-.current::after {
-  display: block;
-  position: absolute;
-  bottom: 0;
-  content: '';
-  width: 100%;
-  height: 4px;
-  background: #2196f3;
-  border-radius: 2px;
-}
-
-.hero {
-  background-color: var(--dark-background-color);
-  text-align: center;
-  padding: 200px 0;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/background.jpg);
-  background-size: 1600px;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.hero__title {
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  color: var(--secondary-text-color);
-  margin-bottom: 30px;
-}
-
-.hero__btn {
-  padding: 10px 32px;
-  border-radius: 4px;
+.mobile-menu-btn {
+  width: 40px;
+  height: 40px;
+  padding: 12px 8px;
+  line-height: 0;
   border: none;
-  font-family: inherit;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  text-align: center;
-  letter-spacing: 0.06em;
-  color: var(--secondary-text-color);
-  background-color: var(--accent-color);
+  background-color: transparent;
   cursor: pointer;
-  transition: background-color var(--transition-duration) var(--transition-timing-function);
 }
 
-.hero__btn:hover, .hero__btn:focus {
-  background-color: #188ce8;
-}
-
-.section.preferences {
-  padding-bottom: 0;
-}
-
-.preferences-list {
-  display: flex;
-}
-
-.preferences-list .list-item {
-  width: calc((100%-90px) / 4);
-}
-
-.preferences-list .preferences-icon-wrap {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 120px;
-  background-color: #f5f4fa;
-  border-radius: 4px;
-  margin-bottom: 30px;
-}
-
-.preferences-list .link-icon {
-  width: 70px;
-  height: 70px;
-}
-
-.preferences-title {
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  margin-bottom: 10px;
-}
-
-.preferences-descr {
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: var(--text-color);
-}
-
-.services .list-item {
-  position: relative;
-}
-
-.services-list {
-  display: flex;
-}
-
-.services-descr {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  background: rgba(47, 48, 58, 0.8);
-  padding: 27px 0;
-  text-align: center;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--secondary-text-color);
-}
-
-.team {
-  background-color: var(--light-background-color);
-}
-
-.team-list {
-  display: flex;
-}
-
-.team-list .link-icon {
-  width: 20px;
-  height: 20px;
-  fill: var(--icon-color);
+.mobile-menu-btn__icon {
   transition: fill var(--transition-duration) var(--transition-timing-function);
 }
 
-.team-list .list-item {
-  width: calc((100%-90px) / 4);
-  background: var(--secondary-text-color);
-  border-radius: 0px 0px 4px 4px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+.mobile-menu-btn:hover .mobile-menu-btn__icon,
+.mobile-menu-btn:focus .mobile-menu-btn__icon {
+  fill: var(--accent-color);
 }
 
-.team-inner {
-  padding: 30px 32px;
+.mobile-menu {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  overflow: auto;
+  background-color: #fff;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transform: scale(0.8);
+  transition: opacity var(--transition-duration) var(--transition-timing-function), transform var(--transition-duration) var(--transition-timing-function);
 }
 
-.team-subtitle {
-  font-weight: 500;
-  color: var(--titels-color);
-  font-size: 16px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  text-align: center;
-  margin-bottom: 10px;
+.mobile-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+  transform: scale(1);
 }
 
-.team-descr {
-  color: var(--text-color);
-  font-size: 16px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  text-align: center;
-  margin-bottom: 16px;
+.mobile-menu .container {
+  position: relative;
 }
 
-.team-soc-links {
-  display: flex;
-}
-
-.team-soc-links .list-item {
-  box-shadow: none;
-}
-
-.team-soc-links .list-item:not(:last-child) {
-  margin-right: 10px;
-}
-
-.team-soc-links .link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  transition: background-color var(--transition-duration) var(--transition-timing-function);
-}
-
-.team-soc-links .link:hover, .team-soc-links .link:focus {
-  background-color: var(--accent-color);
-}
-
-.team-soc-links .link:hover .link-icon, .team-soc-links .link:focus .link-icon {
-  fill: var(--secondary-text-color);
-}
-
-.client-list {
-  display: flex;
-}
-
-.client-list .link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 170px;
-  height: 92px;
-  /* задаем четкие размеры, т.к. размеры иконок разные */
-  border: 1px solid var(--icon-color);
-  color: var(--icon-color);
-  border-radius: 4px;
-  cursor: pointer;
-  transition: border-color var(--transition-duration) var(--transition-timing-function), color var(--transition-duration) var(--transition-timing-function);
-}
-
-.client-list .link:hover, .client-list .link:focus {
-  border-color: var(--accent-color);
-  color: var(--accent-color);
-}
-
-.client-list .link-icon {
-  fill: currentColor;
-}
-
-.footer {
-  background-color: var(--dark-background-color);
-  padding: 60px 0;
-}
-
-.footer .container {
-  display: flex;
-  align-items: baseline;
-}
-
-.footer .link-icon {
-  fill: var(--secondary-text-color);
-  width: 20px;
-  height: 20px;
-}
-
-.contacts {
-  margin-right: 70px;
-}
-
-.footer-logo {
-  display: block;
-  color: var(--secondary-text-color);
-  margin-bottom: 20px;
-}
-
-.footer-contact {
-  font-style: normal;
-  font-size: 14px;
-  line-height: 1.7;
-  letter-spacing: 0.03em;
-  color: var(--secondary-text-color);
-}
-
-.footer-contact-link {
-  display: block;
-  color: rgba(255, 255, 255, 0.6);
-  margin-top: 9px;
-  transition: color var(--transition-duration) var(--transition-timing-function);
-}
-
-.footer-contact-link:hover, .footer-contact-link:focus {
-  color: var(--accent-color);
-}
-
-.join-text {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #ffffff;
-  margin-bottom: 20px;
-}
-
-.join .soc-links {
-  display: flex;
-}
-
-.join .list-item:not(:last-child) {
-  margin-right: 10px;
-}
-
-.join .link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  transition: background-color var(--transition-duration) var(--transition-timing-function);
-  background-color: rgba(255, 255, 255, 0.1);
-}
-
-.join .link:hover, .join .link:focus {
-  background-color: var(--accent-color);
-}
-
-.footer-form-wrapper {
-  margin-left: auto;
-}
-
-.footer-form-text {
-  display: block;
-  margin-bottom: 20px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--secondary-text-color);
-}
-
-.footer-form {
-  display: flex;
-  align-items: center;
-}
-
-.footer-form-field {
-  width: 358px;
-  height: 50px;
-  background-color: transparent;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  padding: 15px 0 15px 16px;
-  margin-right: 12px;
-  color: #ffffff;
-}
-
-.footer-form-field::placeholder {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.25;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.footer-form-btn {
-  padding: 10px 28px;
-  background: var(--accent-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
+.mobile-menu__close-btn {
+  padding: 11px;
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  width: 40px;
+  height: 40px;
+  line-height: 0;
   border: none;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  display: flex;
-  align-items: center;
-  letter-spacing: 0.06em;
-  color: var(--secondary-text-color);
+  background-color: transparent;
   cursor: pointer;
-  transition: background-color var(--transition-duration) var(--transition-timing-function);
 }
 
-.footer-form-btn:hover, .footer-form-btn:focus {
-  background-color: #188CE8;
+.mobile-menu__close-icon {
+  transition: fill var(--transition-duration) var(--transition-timing-function);
 }
 
-.footer-icon-send {
-  width: 24px;
-  height: 24px;
-  margin-left: 10px;
+.mobile-menu__close-btn:hover .mobile-menu__close-icon,
+.mobile-menu__close-btn:focus .mobile-menu__close-icon {
+  fill: var(--accent-color);
+}
+
+.mobile-menu__wrap {
+  padding: 48px 40px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.mobile-nav__link {
+  font-weight: 500;
+  font-size: 8vw;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: #212121;
+}
+
+@media screen and (min-width: 480px) {
+  .mobile-nav__link {
+    font-size: 40px;
+  }
+}
+
+.mobile-nav__link.current {
+  color: var(--accent-color);
+}
+
+.mobile-nav__item:not(:last-child),
+.mobile-contact-list__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-contact-list {
+  margin-bottom: 64px;
+}
+
+.mobile-contact-list__link-tel {
+  font-weight: 500;
+  font-size: 7vw;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+}
+
+@media screen and (min-width: 480px) {
+  .mobile-contact-list__link-tel {
+    font-size: 34px;
+  }
+}
+
+.mobile-contact-list__link-email {
+  font-weight: 500;
+  font-size: 5vw;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--text-color);
+}
+
+@media screen and (min-width: 480px) {
+  .mobile-contact-list__link-email {
+    font-size: 24px;
+  }
+}
+
+.mobile-menu__soc-item:not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.mobile-menu__soc-list {
+  display: flex;
+  margin: 0 -10px;
+}
+
+.mobile-menu__soc-link {
+  padding: 0 2vw;
+  font-weight: 500;
+  font-size: 4vw;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+}
+
+@media screen and (min-width: 480px) {
+  .mobile-menu__soc-link {
+    font-size: 18px;
+    padding: 0 10px;
+  }
 }
 
 .backdrop {
@@ -721,104 +485,5 @@ body {
 
 .submit-button:hover, .submit-button:focus {
   background-color: #188CE8;
-}
-
-.portfolio__btn-list {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
-}
-
-.portfolio__btn {
-  padding: 6px 22px;
-  border-radius: 4px;
-  border: none;
-  font-family: inherit;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.63;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: inherit;
-  background-color: var(--light-background-color);
-  cursor: pointer;
-  transition: color var(--transition-duration) var(--transition-timing-function), background-color var(--transition-duration) var(--transition-timing-function), box-shadow var(--transition-duration) var(--transition-timing-function);
-}
-
-.portfolio__btn:hover, .portfolio__btn:focus {
-  color: var(--secondary-text-color);
-  background-color: var(--accent-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-.portfolio__btn-item:not(:last-child) {
-  margin-right: 8px;
-}
-
-.portfolio__set {
-  display: flex;
-  flex-wrap: wrap;
-  margin: -15px;
-}
-
-.portfolio__item {
-  width: 370px;
-  margin: 15px;
-}
-
-.portfolio__link {
-  display: block;
-  transition: box-shadow var(--transition-duration) var(--transition-timing-function);
-}
-
-.portfolio__link:hover, .portfolio__link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.portfolio__overlay {
-  position: relative;
-  overflow: hidden;
-}
-
-.portfolio__overlay-text {
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: rgba(33, 150, 243, 0.9);
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.56;
-  letter-spacing: 0.03em;
-  color: var(--secondary-text-color);
-  padding: 63px 24px;
-  overflow: auto;
-  transition: transform var(--transition-duration) var(--transition-timing-function);
-}
-
-.portfolio__link:hover .portfolio__overlay-text,
-.portfolio__link:focus .portfolio__overlay-text {
-  transform: translateY(-100%);
-}
-
-.portfolio__inner-wrapper {
-  padding: 20px 24px;
-  border: 1px solid #eeeeee;
-  border-top: none;
-}
-
-.portfolio__subtitle {
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-  color: var(--titels-color);
-  margin-bottom: 4px;
-}
-
-.portfolio__descr {
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.03em;
-  color: var(--text-color);
 }
 /*# sourceMappingURL=main.css.map */
