--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -179,81 +179,146 @@
     }
 }
 
+@media screen and (min-width: 768px){
 
+    .mobile-menu-btn,
+    .mobile-menu {
+        display: none;
+    }
 
+    .main-nav {
+        display: flex;
+        align-items: center;
+    }
 
-// .page-header {
-//     border-bottom: 1px solid #ececec;
+    .page-header__container {
+        display: flex;
+        padding-bottom: 0;
+        padding-top: 0;
+        align-items: center;
+    }
 
-//     .link-icon {
-//         fill: currentColor;
-//         margin-right: 10px;
-//     }
+    .header-logo {
+        margin-right: 88px;
+    }
 
-//     .list-item {
-//         position: relative;
-//     }
-// }
+    .nav-list{
+        display: flex;
+        
+        &__item:not(:last-child) {
+            margin-right: 50px;
+        }
 
+        &__link {
+            position: relative;
+            display: block;
+            padding: 32px 0;
+            font-weight: 500;
+            font-size: 14px;
+            line-height: 1.14;
+            letter-spacing: 0.02em;
+            color: inherit;
+            transition: color var(--transition-duration) var(--transition-timing-function);
+            
+            &:hover,
+            &:focus {
+                color: var(--accent-color);
+            }
+           
+        }
+       
+    }
+ 
+    .header-contact-list {
+        display: block;
+        margin-left: auto;
 
+        &__item:not(:last-child) {
+            margin-bottom: 10px;
+        }
 
-// .main-nav {
-//     display: flex;
-//     align-items: center;
-// }
+        &__link {
+            display: flex;
+            align-items: center;
+        }
 
-// .link-list {
-//     display: flex;
-// }
+        &__link-icon {
+            margin-right: 8px;
+            fill: currentColor;
+        }
 
-// .nav-link {
-//     display: block;
-//     padding: 35px 0;
-//     font-weight: 500;
-//     font-size: 14px;
-//     line-height: 1.14;
-//     letter-spacing: 0.02em;
-//     color: inherit;
-//     transition: color var(--transition-duration) var(--transition-timing-function);
+      
+    }    
 
-//     &:hover,
-//     &:focus {
-//         color: var(--accent-color);
-//     }
-// }
+    .header-contact-list__link {
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 1.17;       
+        letter-spacing: 0.02em;
+        color: var(--text-color);
+        transition: color var(--transition-duration) var(--transition-timing-function);
+        
+        &:hover,
+        &:focus {
+            color: var(--accent-color);
+        }
+    
+        @media screen and (max-width: 1199px) {
+            &.contact-tel {
+                padding-bottom: 21px;
+            }
+        
+            &.contact-email {
+                padding-top: 21px;
+            }
+        }
+       
+    }
 
-// .link-list .list-item:not(:last-child) {
-//     margin-right: 50px;
-// }
+    .current {
+        color: var(--accent-color);
+        
+        &::after {
+            display: block;
+            position: absolute;
+            bottom: 0;
+            content: '';
+            width: 100%;
+            height: 4px;
+            background: #2196f3;
+            border-radius: 2px;
+        }
+    }
+    
+}
 
-// .header-contact-link {
-//     display: flex;
-//     align-items: center;
-//     padding: 35px 0;
-//     font-weight: 500;
-//     font-size: 14px;
-//     line-height: 1.14;
-//     letter-spacing: 0.02em;
-//     color: var(--text-color);
-//     transition: color var(--transition-duration) var(--transition-timing-function);
+@media screen and (min-width: 1200px) {
 
-//     &:hover,
-//     &:focus {
-//         color: var(--accent-color);
-//     }
-// }
+    .header-logo {
+        margin-right: 93px;
+        font-size: 26px;
+        line-height: 1.19;
+    }
 
-// .current {
-//     color: var(--accent-color);
+    .header-contact-list {
+        display: flex;
+        margin-left: auto;
+    
+        &__link {
+            display: flex;
+            align-items: center;
+            padding: 32px 0;
+            font-size: 14px;
+        }
+    
+        &__link-icon {
+            margin-right:10px;
+        }
 
-//     &::after {
-//         display: block;
-//         position: absolute;
-//         bottom: 0;
-//         content: '';
-//         width: 100%;
-//         height: 4px;
-//         background: #2196f3;
-//         border-radius: 2px;
-//     }
-// }
+        &__item:not(:last-child) {
+            margin-right: 30px;
+        }
+    
+    }
+
+}
