--- a/css/main.css
+++ b/css/main.css
@@ -496,8 +496,8 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
   background: #FFFFFF;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -539,11 +539,11 @@ body {
 .modal-title {
   font-weight: 700;
   font-size: 20px;
-  line-height: 23px;
+  line-height: 1.5;
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
-  display: inline-block;
+  display: block;
   margin-bottom: 12px;
 }
 
@@ -552,7 +552,7 @@ body {
   margin-bottom: 4px;
   font-weight: 400;
   font-size: 12px;
-  line-height: 14px;
+  line-height: 1.17;
   letter-spacing: 0.01em;
   color: var(--text-color);
 }
@@ -614,7 +614,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0 7px 0 12px;
+  margin-right: 7px;
   width: 16px;
   height: 15px;
   border: 2px solid #212121;
@@ -641,8 +641,8 @@ body {
   display: flex;
   align-items: center;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--text-color);
   margin-bottom: 30px;
@@ -672,5 +672,19 @@ body {
 
 .submit-button:hover, .submit-button:focus {
   background-color: #188CE8;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-window {
+    width: 528px;
+    height: 581px;
+  }
+  .agreement-field-name {
+    font-size: 14px;
+    line-height: 1.71;
+  }
+  .custom-checkbox {
+    margin-left: 12px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
