--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -19,8 +19,8 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 528px;
-    height: 581px;
+    width:450px;
+    height: 609px;
     background: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
         0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -65,11 +65,11 @@
 .modal-title {
     font-weight: 700;
     font-size: 20px;
-    line-height: 23px;
+    line-height: 1.5;
     text-align: center;
     letter-spacing: 0.03em;
     color: #212121;
-    display: inline-block;
+    display: block;
     margin-bottom: 12px;
 }
 
@@ -78,7 +78,7 @@
     margin-bottom: 4px;
     font-weight: 400;
     font-size: 12px;
-    line-height: 14px;
+    line-height: 1.17;
     letter-spacing: 0.01em;
     color: var(--text-color);
 }
@@ -140,7 +140,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0 7px 0 12px;
+    margin-right: 7px;
     width: 16px;
     height: 15px;
     border: 2px solid #212121;
@@ -167,12 +167,12 @@
     display: flex;
     align-items: center;
     font-weight: 400;
-    font-size: 14px;
-    line-height: 24px;
+    font-size: 12px;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     color: var(--text-color);
     margin-bottom: 30px;
-    cursor: pointer;
+    cursor: pointer;     
 }
 
 .agreement {
@@ -198,5 +198,22 @@
     &:hover,
     &:focus {
         background-color: #188CE8;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+
+    .modal-window {
+        width: 528px;
+        height: 581px;
+    }
+
+    .agreement-field-name {
+        font-size: 14px;
+        line-height: 1.71;
+    }
+
+    .custom-checkbox {
+        margin-left: 12px;
     }
 }
