--- a/css/main.css
+++ b/css/main.css
@@ -475,6 +475,41 @@ body {
   }
 }
 
+.section.preferences {
+  padding-bottom: 0;
+}
+
+.preferences-icon-wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 120px;
+  background-color: #f5f4fa;
+  border-radius: 4px;
+  margin-bottom: 30px;
+}
+
+.link-icon {
+  width: 70px;
+  height: 70px;
+}
+
+.preferences-title {
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.preferences-descr {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--text-color);
+}
+
 .backdrop {
   position: fixed;
   width: 100%;
@@ -496,13 +531,19 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 450px;
+  width: 94vw;
   height: 609px;
   background: #FFFFFF;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transform: translate(-50%, -50%) scale(1);
   transition: transform var(--transition-duration) var(--transition-timing-function);
+}
+
+@media screen and (min-width: 480px) {
+  .modal-window {
+    width: 450px;
+  }
 }
 
 .backdrop.is-hidden .modal-window {
