--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -19,7 +19,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    width:450px;
+    width: 94vw;
     height: 609px;
     background: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
@@ -29,10 +29,16 @@
     transform: translate(-50%, -50%) scale(1);
     transition: transform var(--transition-duration) var(--transition-timing-function);
 
+    @media screen and (min-width: 480px) {
+        width: 450px;    
+    }
+
     .backdrop.is-hidden & {
         transform: translate(-50%, -50%) scale(0.9);
     }
 }
+
+
 
 .close-button {
     position: absolute;
