--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 @import './layout/header';
 @import './layout/hero';
 @import './layout/preferences';
+@import './layout/services';
 
 
 @import './components/backdrop';
