адаптовано секцію team

--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -217,9 +217,7 @@
     .agreement-field-name {
         font-size: 14px;
         line-height: 1.71;
+        justify-content: center;
     }
 
-    .custom-checkbox {
-        margin-left: 12px;
-    }
 }
