--- a/css/main.css
+++ b/css/main.css
@@ -578,6 +578,111 @@ body {
   color: var(--secondary-text-color);
 }
 
+.team {
+  background-color: var(--light-background-color);
+}
+
+.team__card {
+  background: #FFFFFF;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+@media screen and (max-width: 767px) {
+  .team__card:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+.team__wrap {
+  padding: 30px 0 24px 0;
+}
+
+.team__subtitle {
+  text-align: center;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: #212121;
+  margin-bottom: 10px;
+}
+
+.team__descr {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--text-color);
+  margin-bottom: 16px;
+}
+
+.team__soc-set {
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.team__soc-icon {
+  fill: currentColor;
+}
+
+.team__soc-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  color: var(--text-color);
+  transition: background-color var(--transition-duration) var(--transition-timing-function), color var(--transition-duration) var(--transition-timing-function);
+}
+
+.team__soc-link:hover, .team__soc-link:focus {
+  background-color: var(--accent-color);
+  color: var(--secondary-text-color);
+}
+
+.team__soc-item:not(:last-child) {
+  margin-right: 10px;
+}
+
+@media screen and (min-width: 768px) {
+  .team__list {
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .team__list {
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .team__card {
+    width: calc((100% - 15px*4) /2);
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .team__card {
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team__list {
+    justify-content: space-between;
+  }
+  .team__card {
+    width: calc((100% - 30px*3) /4);
+  }
+}
+
 .backdrop {
   position: fixed;
   width: 100%;
@@ -791,9 +896,7 @@ body {
   .agreement-field-name {
     font-size: 14px;
     line-height: 1.71;
-  }
-  .custom-checkbox {
-    margin-left: 12px;
+    justify-content: center;
   }
 }
 /*# sourceMappingURL=main.css.map */
