--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import './layout/hero';
 @import './layout/preferences';
 @import './layout/services';
+@import './layout/team';
 
 
 @import './components/backdrop';
