--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import './layout/preferences';
 @import './layout/services';
 @import './layout/team';
+@import './layout/clients';
 
 
 @import './components/backdrop';
