--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -58,7 +58,7 @@
     width: 44px;
     height: 44px;
     border-radius: 50%;
-    color: var(--text-color);
+    color: var(--icon-color);
     transition: background-color var(--transition-duration) var(--transition-timing-function), color var(--transition-duration) var(--transition-timing-function);
 
     &:hover,
