--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -11,6 +11,7 @@
 
     .client__item {
         margin: 15px;
+        width: calc((100% - 15px*4) /2);
     }
     
 }
@@ -21,9 +22,15 @@
     align-items: center;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
-    width: 210px;
-    height: 92px;
+    width: 100%;
+    padding: 16px 0;
     color: var(--icon-color);
+    transition: border-color var(--transition-duration) var(--transition-timing-function),
+    color var(--transition-duration) var(--transition-timing-function);
+
+    @media screen and (min-width: 480px) {
+        width: 210px;
+    }
 
     &:hover,
     &:focus {
