--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import './layout/services';
 @import './layout/team';
 @import './layout/clients';
+@import './layout/footer';
 
 
 @import './components/backdrop';
