--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -23,14 +23,11 @@
     border: 1px solid #AFB1B8;
     border-radius: 4px;
     width: 100%;
+    height: 92px;
     padding: 16px 0;
     color: var(--icon-color);
     transition: border-color var(--transition-duration) var(--transition-timing-function),
     color var(--transition-duration) var(--transition-timing-function);
-
-    @media screen and (min-width: 480px) {
-        width: 210px;
-    }
 
     &:hover,
     &:focus {
@@ -45,15 +42,15 @@
 
 @media screen and (min-width: 768px) {
 
-    .client__link {
-        width: 226px;
+    .client__item {
+        width: calc((100% - 15px*6) /3);
     }
 }
 
 @media screen and (min-width: 1200px) {
     
-    .client__link {
-        width: 170px;
+    .client__item {
+        width: calc((100% - 30px*5) /6);
     }
 
     .client__item:not(:last-child) {
