--- a/css/main.css
+++ b/css/main.css
@@ -740,11 +740,17 @@ body {
   }
 }
 
+.footer {
+  background-color: var(--dark-background-color);
+  padding: 60px 0;
+}
+
 .backdrop {
   position: fixed;
   width: 100%;
   height: 100%;
   top: 0;
+  overflow: scroll;
   background: rgba(0, 0, 0, 0.2);
   opacity: 1;
   transition: opacity var(--transition-duration) var(--transition-timing-function);
@@ -778,6 +784,13 @@ body {
 
 .backdrop.is-hidden .modal-window {
   transform: translate(-50%, -50%) scale(0.9);
+}
+
+@media screen and (max-height: 608px) {
+  .modal-window {
+    top: 0;
+    transform: translate(-50%, 0) scale(1);
+  }
 }
 
 .close-button {
