--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,3 +2,133 @@
     background-color: var(--dark-background-color);
     padding: 60px 0;
 }
+
+.footer__logo {
+    display: block;
+    text-align: center;
+    color: var(--secondary-text-color);
+    margin-bottom: 20px;
+}
+
+.footer__address {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.17;   
+    text-align: center;
+    letter-spacing: 0.03em;    
+    color: var(--secondary-text-color);
+    margin-bottom: 60px;
+
+}
+
+.footer__subtitle {
+    display: block;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-align: center;
+    text-transform: uppercase; 
+    margin-bottom: 20px;   
+    color: var(--secondary-text-color);
+}
+
+.footer__contact-link {
+    display: block;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.17;
+    text-align: center;
+    letter-spacing: 0.03em;    
+    color: rgba(255, 255, 255, 0.6);
+    margin-top: 8px;
+}
+
+.join {
+    margin-bottom: 60px;
+}
+
+.soc-list {
+    display: flex;
+    justify-content: center;
+}
+
+.soc-list__item:not(:last-child) {
+    margin-right: 10px;
+}
+
+.soc-list__link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 44px;
+    height: 44px;
+    color: var(--secondary-text-color);
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
+    transition: background-color var(--transition-duration) var(--transition-timing-function);
+
+    &:hover,
+    &:focus {
+        background-color: var(--accent-color);
+    }
+}
+
+.soc-list__icon {
+    width: 20px;
+    height: 20px;
+    fill: currentColor;
+}
+
+.footer-form__btn {
+    display: block;
+}
+
+.footer-form__field {
+    width: 100%;
+    height: 50px;
+    background-color: transparent;
+    color: #ffffff;
+    padding: 15px 16px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-sizing: border-box;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    margin-bottom: 20px;
+
+    &:focus {
+        outline: 2px solid var(--accent-color);
+    }
+}
+
+.footer-form__field::placeholder {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;    
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-form__btn {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    align-items: center;
+    padding: 10px 28px;
+    background: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 30px;    
+    letter-spacing: 0.06em;
+    color: var(--secondary-text-color);
+}
+
+.footer-form__icon-send {
+    margin-left: 10px;
+    width: 24px;
+    height: 24px;
+}
