--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -119,6 +119,7 @@
     background: var(--accent-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
+    border: none;
 
     font-weight: 700;
     font-size: 16px;
@@ -131,4 +132,26 @@
     margin-left: 10px;
     width: 24px;
     height: 24px;
+}
+
+@media screen and (min-width: 768px) {
+    .footer .container {
+        display: flex;
+        align-items: baseline;
+
+    }
+
+    @media screen and (max-width: 1199px) {
+        .footer .container {
+            flex-wrap: wrap;
+        }
+
+        .footer__contacts {
+            margin-right: 165px;
+        }
+
+        .footer-form__wrapper {
+            justify-content: center;
+        }
+    }
 }
