--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -66,6 +66,7 @@
     visibility: hidden;
     pointer-events: none;
     transform: scale(0.8);
+    z-index: 2;
 
     transition: opacity var(--transition-duration) var(--transition-timing-function), transform var(--transition-duration) var(--transition-timing-function);
 
