--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -66,6 +66,7 @@
 @media screen and (min-width: 1200px) {
 
     .hero {
+        padding: 200px 0;
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
             url(../images/hero_bg_desktop.jpg);
         background-size: 1600px;
@@ -76,5 +77,10 @@
         (min-resolution: 2dppx) {
             background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero_bg_desktop@2x.jpg);
         }
+    }
+
+    .hero__title {
+        font-size: 44px;
+        line-height: 1.36;
     }
 }
